ci: add working-directory to pipeline var

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
         run: terraform init
 
       - name: Terraform variables
+        working-directory: terraform
         run: |
           cat > pipeline.tfvars <<EOF
           account_id = "${{ secrets.ACCOUNT_ID }}"
